[gd_scene load_steps=3 format=2]

[ext_resource path="res://Debris.gd" type="Script" id=1]
[ext_resource path="res://Debris_Body.tscn" type="PackedScene" id=3]

[node name="Debris" type="StaticBody2D"]
z_index = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, 0, 100, -100, 100, 0 )

[node name="Debris_Body" parent="." instance=ExtResource( 3 )]
position = Vector2( 65.4195, -107.136 )

[node name="Debris_Body2" parent="." instance=ExtResource( 3 )]
position = Vector2( 50.2571, -91.6767 )

[node name="Debris_Body3" parent="." instance=ExtResource( 3 )]
position = Vector2( 85.3387, -101.488 )

[node name="Debris_Body4" parent="." instance=ExtResource( 3 )]
position = Vector2( 70.1763, -86.3253 )

[node name="Debris_Body5" parent="." instance=ExtResource( 3 )]
position = Vector2( 55.0139, -71.4602 )

[node name="RayCast2D" type="RayCast2D" parent="."]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 1000 )
collision_mask = 2

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
